Archive2/97/8d0cd0eea2849b/output
main.cpp: In function 'int main()':
main.cpp:16:16: error: call of overloaded 'myfunction()' is ambiguous
     myfunction(); // error: there is no using declaration / directive
                ^
main.cpp:6:10: note: candidate: void orange::myfunction()
     void myfunction(){}
          ^
main.cpp:2:10: note: candidate: void apple::myfunction()
     void myfunction(){}
          ^
